--- a/views/app.html
+++ b/views/app.html
@@ -9,6 +9,8 @@
 
 	<br>
 	<a href="/">Home</a> |
-	<a href="/about">About</a>
+	<a href="/about">About</a> |
+	<a href="/about">JSON</a>
+
 </body>
 </html>
